--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -198,11 +198,14 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     and then walls will be attacked.
 \end{itemize}
 
+\vspace*{1em}
+\includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/cerberi.png}
+
 \end{multicols*}
 
 \begin{tikzpicture}[remember picture, overlay]
-  \node(bg)[anchor=center, yshift=43em, opacity=0.3] at (current page.south) {
-    \includegraphics[width=0.85\paperwidth, keepaspectratio]{\art/cerberi.png}
+  \node(bg)[anchor=center, yshift=37em, opacity=0.17] at (current page.south) {
+    \includegraphics[width=0.85\paperwidth, keepaspectratio]{\art/inferno.png}
   };
   \node(map)[anchor=center] at (current page.center) {
     \includegraphics[width=\textwidth]{\_assets/maps/inferno_deal_with_the_devil.png}
