typesetting fixes for Sentinel

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -34,7 +34,7 @@ This scenario is played over 12 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
-\textbf{Map tile Pool:} Each player takes 1 random Near (IV-V) Map tile and 1 random Far (II-III) Map tile. These tiles should not contain any Obelisks.
+\textbf{Map tile Pool:} Each player takes 1 random Near (IV--V) Map tile and 1 random Far (II--III) Map tile. These tiles should not contain any Obelisks.
 
 \textbf{Additional Bonus:} Search (2) the Artifact Deck
 
@@ -48,9 +48,9 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
   \item Ignore their yellow borders.
 \end{itemize}
 
-\textbf{4 × Far (II-III) Map tile}
+\textbf{4 × Far (II--III) Map tile}
 
-\textbf{4 × Near (IV-V) Map tile}
+\textbf{4 × Near (IV--V) Map tile}
 \begin{itemize}
   \item All Near Map tiles must have Obelisks.
 \end{itemize}
@@ -67,23 +67,23 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{6$^{th}$ Round:}
+\textbf{\nth{6} Round:}
 \begin{itemize}
   \item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
   \item Spawn an enemy army following the rules outlined below.
 \end{itemize}
 
-\textbf{7$^{th}$ and 8$^{th}$ Rounds:}
+\textbf{\nth{7} and \nth{8} Rounds:}
 \begin{itemize}
   \item Spawn an enemy army following the rules outlined below.
 \end{itemize}
 
-\textbf{9$^{th}$ Round:}
+\textbf{\nth{9} Round:}
 \begin{itemize}
   \item Repeat the Timed Events of Round 6.
 \end{itemize}
 
-\textbf{10$^{th}$ Round:}
+\textbf{\nth{10} Round:}
 \begin{itemize}
   \item Repeat the Timed Events of Rounds \mbox{7 and 8.}
 \end{itemize}
@@ -108,8 +108,8 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).
   \item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:
   \begin{itemize}[leftmargin=15pt]
-    \item +1/+1 = North, +1/-1 = East
-    \item -1/+1 = West, -1/-1 = South
+    \item $+1$/$+1$ = North, $+1$/$-1$ = East
+    \item $-1$/$+1$ = West, $-1$/$-1$ = South
   \end{itemize}
   \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.
   Rounds 8 and 10 are entirely random.
@@ -117,7 +117,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
   \item If there is a hero on the field where the enemy spawns, a fight starts immediately.
   \item Enemy armies move at the end of every turn, starting with the turn they spawned.
   \item Enemy armies have 3 MPs per round.
-  \item Enemy armies move as described in the rulebook (p. 33), but instead of capturing, they destroy everything in their path.
+  \item Enemy armies move as described in the rulebook (p.\,33), but instead of capturing, they destroy everything in their path.
     Place Black cubes on any field they pass through, treating those fields as empty from that point on.
   \item If an enemy's movement could go in different directions, the players decide which way they go.
 \end{itemize}
@@ -136,7 +136,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \begin{itemize}
   \item In Round 10, a Boss Army spawns. It is different from previous armies because it is reinforced from a fixed pool of neutral units (reinforcement pool = number in brackets in the table below).
-  \item At the beginning of the 2$^{nd}$ combat round and every following round, 2 units reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 units) to continue the fight until either the player retreats or every neutral unit from the reinforcement pool is killed. \textit{If the number of enemy units at the beginning of a round is 1 or lower, draw up to a total of 4 units (i.e., there are always 4 or 5 enemy units on the board after reinforcing, if available).}
+  \item At the beginning of the \nth{2} combat round and every following round, 2 units reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 units) to continue the fight until either the player retreats or every neutral unit from the reinforcement pool is killed. \textit{If the number of enemy units at the beginning of a round is 1 or lower, draw up to a total of 4 units (i.e., there are always 4 or 5 enemy units on the board after reinforcing, if available).}
   \item Place the reinforcing units on the enemy base line, starting from the left with the lowest initiative (\svg{unit_ranged} units first). If necessary, continue on the next line in the same order.
   \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.
 \end{itemize}
