--- a/metadata.tex
+++ b/metadata.tex
@@ -455,9 +455,9 @@
 
 \include{coops/main.tex}
 
-\include{clash/main.tex}
+%\include{clash/main.tex}
 
-\include{campaigns/main.tex}
+%\include{campaigns/main.tex}
 
 \include{\sections/credits.tex}
 
