Add design fixes

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -119,6 +119,18 @@ During this scenario:
   \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat round, if the Hero is a \textcolor{darkcerulean}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your units.''
 \end{itemize}
 
+\vspace*{\fill}
+
+\begin{center}
+  \begin{tikzpicture}[remember picture]
+    \node(bg)[anchor=center, opacity=0.3] at (current page.south) {
+      \includegraphics[width=0.5\linewidth, keepaspectratio]{\art/bless.png}
+    };
+  \end{tikzpicture}
+\end{center}
+
+\vspace*{\fill}
+
 \end{multicols*}
 
 \begin{tikzpicture}[overlay]
