--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -147,7 +147,9 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \end{multicols}
 
-\hommtable[]{18}{
+\vspace*{\fill}
+
+\hommtable[]{20}{
   \centering
   \medskip
   \textbf{Strength of Enemy Armies}\\
@@ -181,5 +183,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
       (7\golden, 3\azure)}\\
   \end{tabularx}
 }
+
+\vspace*{\fill}
 
 \footnotetext[1]{Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is random\label{azure}.}
