--- a/metadata.tex
+++ b/metadata.tex
@@ -90,7 +90,7 @@
 \def\examples{\_assets/examples}
 \def\images{\_assets/images}
 \def\layout{\_assets/layout}
-\def\map_locations{\_assets/map-locations}
+\def\maps{\_assets/maps}
 \def\skills{\_assets/skills}
 \def\spells{\_assets/spells}
 \def\svgs{\_assets/glyphs}
@@ -124,7 +124,7 @@
 
 \renewcommand{\labelitemi}{
   \begin{tikzpicture}
-    \node (listdot) [circle, blur shadow={fill=camel, shadow yshift=0pt, shadow xshift=0pt, shadow blur radius=1.2pt, shadow blur steps=10}, inner sep=-1.5] {\includegraphics[width=0.7em, valign=c]{\layout/listdot.png}};
+    \node (listdot) [circle, inner sep=-3] {\includegraphics[width=1em, valign=c]{\layout/listdot.png}};
   \end{tikzpicture}
 }
 
@@ -252,18 +252,17 @@
   \makebox[0pt][l]{
   \raisebox{-\totalheight}[0pt][7pt]{
     \ifthenelse{\oneliner}{\def\yscale{1}}{\def\yscale{1.3}}
-    \begin{tikzpicture}
-      \draw (0, 0) node[inner sep=0, yscale=\yscale] (header) {\includegraphics[width=\linewidth, height=0.2\linewidth]{\layout/section_heading.jpg}};
-      \draw (-6.2, 0) node {\includegraphics[width=0.125\textwidth]{#5}};
-      \addheadershadow{header}
-    \end{tikzpicture}
+      \begin{tikzpicture}
+        \draw (0, 0) node[inner sep=0, yscale=\yscale] (header){\makebox[\textwidth][c]{\includegraphics[width=1.06\linewidth, height=0.25\linewidth]{\layout/section_heading.png}}};
+        \draw (-6.2, 0) node {\includegraphics[width=0.125\textwidth]{#5}};
+      \end{tikzpicture}
     }
   }
   \begin{fullwidth}[leftmargin=0.2\textwidth]
     \begin{center}
-      \vspace{-22pt}
-      \sectionheadertext{\small{\sotitle{#3}}}
       \vspace{-12pt}
+      \sectionheadertext{\small{\sotitle{#3}}}
+      \vspace{-10pt}
       \sectionheadertext{#4}
       \ifthenelse{\oneliner}{}{\vspace{14pt}}
       \cleardoublepage\phantomsection\addcontentsline{toc}{#1}{\protect\numberline{} {} {} {} {}#4}
