--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -185,14 +185,11 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
 \vspace*{\fill}
 
 \begin{center}
-  \begin{tikzpicture}[remember picture]
-    \node(bg)[anchor=center, opacity=0.3] at (current page.south) {
-      \includegraphics[width=0.5\linewidth, keepaspectratio]{\art/building_materials.png}
-    };
-  \end{tikzpicture}
+  \transparent{0.3}{\includegraphics[width=0.6\linewidth, keepaspectratio]{\art/land_mine.png}}
 \end{center}
 
 \vspace*{\fill}
+
 
 \newpage
 
