--- a/metadata.tex
+++ b/metadata.tex
@@ -36,6 +36,7 @@
 \usepackage[subfigure]{tocloft}
 \usepackage{tikz}
 \usepackage{titlesec}
+\usepackage{transparent}
 \usepackage{verbatim}
 \usepackage{varwidth}
 \usepackage{wrapfig}
