--- a/metadata.tex
+++ b/metadata.tex
@@ -103,7 +103,7 @@
 
 \newcommand{\svg}[2][]{%
   \ifthenelse{\equal{#1}{}}%
-  {\includesvg[height=10px]{\svgs/\detokenize{#2}.svg}}%
+  {\raisebox{-.15\height}{\includesvg[height=10px]{\svgs/\detokenize{#2}.svg}}}%
   {\includesvg[height=#1px]{\svgs/\detokenize{#2}.svg}}%
 }%
 
@@ -248,13 +248,13 @@
   \sodef\sotitle{}{0.2em}{0.6em}{1.2em}
   \def\oneliner{\equal{#2}{1}}
 
-  \vspace*{-5em}
+  \vspace*{-5.72em}
   \hspace*{-1.3em}
   \makebox[0pt][l]{
   \raisebox{-\totalheight}[0pt][7pt]{
     \ifthenelse{\oneliner}{\def\yscale{1}}{\def\yscale{1.3}}
       \begin{tikzpicture}
-        \draw (0, 0) node[inner sep=0, yscale=\yscale] (header){\makebox[\textwidth][c]{\includegraphics[width=1.06\linewidth, height=0.25\linewidth]{\layout/section_heading.png}}};
+        \draw (0, 0) node[inner sep=0, yscale=\yscale] (header){\makebox[\textwidth][c]{\includegraphics[width=1.06\linewidth, height=0.24\linewidth]{\layout/section_heading.png}}};
         \draw (-6.2, 0) node {\includegraphics[width=0.125\textwidth]{#5}};
       \end{tikzpicture}
     }
