--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-03 12:58+0200\n"
+"POT-Creation-Date: 2024-07-03 00:05+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -46,6 +46,16 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\textbf{Additional Bonus:} None\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: coops/titans_stronghold.tex:105 coops/titans_stronghold.tex:111
+#: clash/bloody_grail.tex:123 clash/bloody_grail.tex:129
+#: sections/credits.tex:27 sections/credits.tex:31
+#, no-wrap
+msgid ""
+"\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
 
@@ -302,8 +312,18 @@ msgid ""
 "\n"
 msgstr ""
 
+#. type: multicols*
+#: clash/bloody_grail.tex:127
+#, no-wrap
+msgid ""
+"\\begin{center}\n"
+"  \\transparent{0.3}{\\includegraphics[width=0.5\\linewidth, keepaspectratio]{\\art/bless.png}}\n"
+"\\end{center}\n"
+"\n"
+msgstr ""
+
 #. type: tikzpicture
-#: clash/bloody_grail.tex:130
+#: clash/bloody_grail.tex:138
 #, no-wrap
 msgid ""
 "[overlay]\n"
