Move map tiles down

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -143,9 +143,15 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \columnbreak
 
-\includegraphics[width=0.4\paperwidth]{\_assets/maps/sentinels.png}
+\vspace*{\fill}
 
 \end{multicols}
+
+\begin{tikzpicture}[overlay]
+  \centering
+  \node at (14, 1.5) {\includegraphics[width=0.4\paperwidth]{\_assets/maps/sentinels.png}};
+\end{tikzpicture}
+
 
 \vspace*{\fill}
 
