--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -16,7 +16,7 @@ This scenario is played over 8 rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
-\textbf{Player Count:} 1 - 4
+\textbf{Player Count:} 1 -- 4
 
 \textbf{Starting Resources:}\par
 \resources{5}{2}{1}
@@ -32,25 +32,25 @@ This scenario is played over 8 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
 
-\textbf{Map tile Pool:} If you wish, you can distribute the II-III tiles equally to each player rather than laying them out as proposed.
+\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.
 
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout (P stands for the number of players):
+Take the following Map tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):
 
-\textbf{(1*P) Starting (I) Map tile}
+$\boldsymbol{P}$ \textbf{× Starting (I) Map tile}
 \begin{itemize}
   \item Starting Tiles of your chosen factions.
-  \item Ignore any yellow lines between tiles I (but not between tiles I and tiles II-III)
+  \item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)
 \end{itemize}
 
-\textbf{(4*P) × Far (II-III) Map tile}
+$\boldsymbol{4 P}$ \textbf{× Far (II--III) Map tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II-III contains one Mine or Settlement with a level III fight.)
+Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
@@ -58,7 +58,7 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{5$^{th}$ Round:}
+\textbf{\nth{5} Round:}
 \begin{itemize}
   \item Gain again the result of one field with a Black Cube.
 \end{itemize}
