--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-02 23:32+0100\n"
+"POT-Creation-Date: 2024-07-02 23:46+0100\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -111,6 +111,14 @@ msgid ""
 "\n"
 msgstr ""
 
+#. type: multicols*
+#: coops/titans_stronghold.tex:45 coops/emerald_island.tex:42
+#, no-wrap
+msgid ""
+"Take the following Map tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):\n"
+"\n"
+msgstr ""
+
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/emerald_island.tex:3
@@ -150,7 +158,7 @@ msgstr ""
 #: coops/emerald_island.tex:20
 #, no-wrap
 msgid ""
-"\\textbf{Player Count:} 1 - 4\n"
+"\\textbf{Player Count:} 1 -- 4\n"
 "\n"
 msgstr ""
 
@@ -184,15 +192,7 @@ msgstr ""
 #: coops/emerald_island.tex:36
 #, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} If you wish, you can distribute the II-III tiles equally to each player rather than laying them out as proposed.\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: coops/emerald_island.tex:42
-#, no-wrap
-msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout (P stands for the number of players):\n"
+"\\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
 msgstr ""
 
@@ -200,10 +200,10 @@ msgstr ""
 #: coops/emerald_island.tex:48
 #, no-wrap
 msgid ""
-"\\textbf{(1*P) Starting (I) Map tile}\n"
+"$\\boldsymbol{P}$ \\textbf{× Starting (I) Map tile}\n"
 "\\begin{itemize}\n"
 "  \\item Starting Tiles of your chosen factions.\n"
-"  \\item Ignore any yellow lines between tiles I (but not between tiles I and tiles II-III)\n"
+"  \\item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -212,7 +212,7 @@ msgstr ""
 #: coops/emerald_island.tex:50
 #, no-wrap
 msgid ""
-"\\textbf{(4*P) × Far (II-III) Map tile}\n"
+"$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map tile}\n"
 "\n"
 msgstr ""
 
@@ -220,7 +220,7 @@ msgstr ""
 #: coops/emerald_island.tex:54
 #, no-wrap
 msgid ""
-"Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II-III contains one Mine or Settlement with a level III fight.)\n"
+"Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
 "\n"
 msgstr ""
 
@@ -236,7 +236,7 @@ msgstr ""
 #: coops/emerald_island.tex:65
 #, no-wrap
 msgid ""
-"\\textbf{5$^{th}$ Round:}\n"
+"\\textbf{\\nth{5} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item Gain again the result of one field with a Black Cube.\n"
 "\\end{itemize}\n"
