--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -31,7 +31,7 @@ This scenario is played over 14 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
 
-\textbf{Map tile Pool:} Each player takes 1 random Far (II-III) Map tile
+\textbf{Map tile Pool:} Each player takes 1 random Far (II--III) Map tile
 
 \textbf{Additional Bonus:} None
 
@@ -44,24 +44,24 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 \textbf{For a 2-player scenario:}
 \begin{itemize}
   \item 2 × Starting (I) Map tile
-  \item 2 × Far (II-III) Map tile
-  \item 2 × Near (IV-V) Map tile
-  \item 1 × Center (VI-VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 2 × Far (II--III) Map tile
+  \item 2 × Near (IV--V) Map tile
+  \item 1 × Center (VI--VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
 \end{itemize}
 
 \textbf{For a 3-player scenario:}
 \begin{itemize}
   \item 3 × Starting (I) Map tile
-  \item 3 × Far (II-III) Map tile
-  \item 3 × Near (IV-V) Map tile
-  \item 1 × Center (VI-VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 3 × Far (II--III) Map tile
+  \item 3 × Near (IV--V) Map tile
+  \item 1 × Center (VI--VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 Slay the Dragon Boss with your Main Hero.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If the Dragon Boss still lives at the end of the 14th round, all players lose the scenario.
+If the Dragon Boss still lives at the end of the \nth{14} round, all players lose the scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -76,7 +76,7 @@ Before the start of this scenario:
 
 \begin{itemize}
   \item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
-    You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} - Azure, \textit{Defense} - Crystal, \textit{Knowledge} - Rust, \textit{Power} - Faerie.
+    You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} -- Azure, \textit{Defense} -- Crystal, \textit{Knowledge} -- Rust, \textit{Power} -- Faerie.
 \end{itemize}
 
 During this scenario:
