--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -65,7 +65,7 @@ If the Dragon Boss still lives at the end of the \nth{14} round, all players los
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Rounds:}
+\textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
 \begin{itemize}
   \item Remove all Black cubes from all the Water Wheels, Windmills and Markets of Time on the map.
 \end{itemize}
@@ -203,7 +203,7 @@ During this scenario:
       During its turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume it, removing a certain amount of \svg{damage-red} based on the type of Golem consumed:
       \begin{itemize}
         \item Consuming a Gold Golem: Remove 2 \svg{damage-red}.
-        \item Consuming a Diamond Golem: Rmove 4 \svg{damage-red}.
+        \item Consuming a Diamond Golem: Remove 4 \svg{damage-red}.
         \item[] \textbf{Note:} The Crystal Dragon can only consume one Golem per turn.
       \end{itemize}
     \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their cards.
