fix typesetting in hunt, fix typo (#48)
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -31,7 +31,7 @@ This scenario is played over 14 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
 
-\textbf{Map tile Pool:} Each player takes 1 random Far (II-III) Map tile
+\textbf{Map tile Pool:} Each player takes 1 random Far (II--III) Map tile
 
 \textbf{Additional Bonus:} None
 
@@ -44,28 +44,28 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 \textbf{For a 2-player scenario:}
 \begin{itemize}
   \item 2 × Starting (I) Map tile
-  \item 2 × Far (II-III) Map tile
-  \item 2 × Near (IV-V) Map tile
-  \item 1 × Center (VI-VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 2 × Far (II--III) Map tile
+  \item 2 × Near (IV--V) Map tile
+  \item 1 × Center (VI--VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
 \end{itemize}
 
 \textbf{For a 3-player scenario:}
 \begin{itemize}
   \item 3 × Starting (I) Map tile
-  \item 3 × Far (II-III) Map tile
-  \item 3 × Near (IV-V) Map tile
-  \item 1 × Center (VI-VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 3 × Far (II--III) Map tile
+  \item 3 × Near (IV--V) Map tile
+  \item 1 × Center (VI--VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 Slay the Dragon Boss with your Main Hero.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If the Dragon Boss still lives at the end of the 14th round, all players lose the scenario.
+If the Dragon Boss still lives at the end of the \nth{14} round, all players lose the scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Rounds:}
+\textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
 \begin{itemize}
   \item Remove all Black cubes from all the Water Wheels, Windmills and Markets of Time on the map.
 \end{itemize}
@@ -76,7 +76,7 @@ Before the start of this scenario:
 
 \begin{itemize}
   \item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
-    You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} - Azure, \textit{Defense} - Crystal, \textit{Knowledge} - Rust, \textit{Power} - Faerie.
+    You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} -- Azure, \textit{Defense} -- Crystal, \textit{Knowledge} -- Rust, \textit{Power} -- Faerie.
 \end{itemize}
 
 During this scenario:
@@ -203,7 +203,7 @@ During this scenario:
       During its turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume it, removing a certain amount of \svg{damage-red} based on the type of Golem consumed:
       \begin{itemize}
         \item Consuming a Gold Golem: Remove 2 \svg{damage-red}.
-        \item Consuming a Diamond Golem: Rmove 4 \svg{damage-red}.
+        \item Consuming a Diamond Golem: Remove 4 \svg{damage-red}.
         \item[] \textbf{Note:} The Crystal Dragon can only consume one Golem per turn.
       \end{itemize}
     \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their cards.
