the rest, and templates

--- a/sections/credits.tex
+++ b/sections/credits.tex
@@ -11,7 +11,7 @@
 This project shamelessly borrows best practices from the \href{https://github.com/Heegu-sama/Homm3BG}{\textbf{Rule Book Rewrite Project}}, including LaTeX code, GitHub engineering, and translation framework.
 You should check it out if you haven't seen it yet.
 
-\textbf{Scenario templating and LaTeX writing}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov
+\textbf{Scenario templating and \LaTeX writing}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov
 
 \phantom{Translators placeholder}
 
