--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -61,9 +61,9 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far Map tile (II-III)}
+\textbf{Y × Far Map tile (II--III)}
 
-\textbf{Z × Near Map tile (IV-V)}
+\textbf{Z × Near Map tile (IV--V)}
 
 \subsection*{\MakeUppercase{Heroes placement}}
 
@@ -77,7 +77,7 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{X$^{th}$ Round:}
+\textbf{\nth{2} Round:}
 \begin{itemize}
   \item ...
   \item ...
@@ -85,17 +85,17 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 % IF THERE ARE OVERLAPPING EVENTS, FOLLOW BELOW STRUCTURE, IN CHRONOLOGICAL ORDER
 %
-% \textbf{7$^{th}$ and 8$^{th}$ Rounds:}
+% \textbf{\nth{7} and \nth{8} Rounds:}
 % \begin{itemize}
 %   \item ...
 % \end{itemize}
 %
-% \textbf{9$^{th}$ Round:}
+% \textbf{\nth{9} Round:}
 % \begin{itemize}
 %   \item Repeat Timed Events of Round 6.
 % \end{itemize}
 %
-% \textbf{10$^{th}$ Round:}
+% \textbf{\nth{10} Round:}
 % \begin{itemize}
 %   \item Repeat Timed Events of Rounds 7 and 8.
 % \end{itemize}
