--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} ...
 
-\textit{... 1-2 two paragraphs to set the story ...}
+\textit{... 1--2 two paragraphs to set the story ...}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
@@ -33,7 +33,7 @@ This scenario is played over ... rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling...
 
-\textbf{Map tile Pool:} Each player takes X [random] Near/Far Map (A-B) Tiles...
+\textbf{Map tile Pool:} Each player takes X [random] Near/Far Map (A--B) Tiles...
 
 \textbf{Additional Bonus:} Choose one of the following options:
 
@@ -50,9 +50,9 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far (II-III) Map tile}
+\textbf{Y × Far (II--III) Map tile}
 
-\textbf{Z × Near (IV-V) Map tile}
+\textbf{Z × Near (IV--V) Map tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
@@ -62,7 +62,7 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{X$^{th}$ Round:}
+\textbf{\nth{2} Round:}
 \begin{itemize}
   \item ...
   \item ...
@@ -70,17 +70,17 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 % IF THERE ARE OVERLAPPING EVENTS, FOLLOW BELOW STRUCTURE, IN CHRONOLOGICAL ORDER
 %
-% \textbf{7$^{th}$ and 8$^{th}$ Rounds:}
+% \textbf{\nth{7} and \nth{8} Rounds:}
 % \begin{itemize}
 %   \item ...
 % \end{itemize}
 %
-% \textbf{9$^{th}$ Round:}
+% \textbf{\nth{9} Round:}
 % \begin{itemize}
 %   \item Repeat Timed Events of Round 6.
 % \end{itemize}
 %
-% \textbf{10$^{th}$ Round:}
+% \textbf{\nth{10} Round:}
 % \begin{itemize}
 %   \item Repeat Timed Events of Rounds 7 and 8.
 % \end{itemize}
